# aoc-2025

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
input/: day_00_sample.txt
src/: main.rs
src/libs/: range.rs
