[package]
name = "aoc-2025"
authors = ["Tien Dat Pham <swyrin@akvns.org>"]
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2024"
default-run = "aoc-2025"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
geo = "0.32.0"
num-bigint = "0.4.6"
parameterized = "2.1.0"
petgraph = "0.8.3"
regex = "1.12.2"

[profile.release]
opt-level = 3
strip = true
lto = true
